applications/calibre/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: calibre-web
  name: calibre-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre-web
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/London
          image: ghcr.io/linuxserver/calibre-web
          name: calibre-web
          ports:
            - containerPort: 8083
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: server
              subPath: calibre
            - mountPath: /books
              name: media
              subPath: calibre
      restartPolicy: Always
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
        - name: media
          persistentVolumeClaim:
            claimName: media
